# 2FA-JWT-App

./: README.md  docker-compose.yml
backend/: .env.dist  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: apps.py  models.py  permissions.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_user_is_confirmed.py  0003_alter_user_email.py  0004_rename_is_confirmed_user_is_veryfied.py
backend/app/templates/: verify_email.html
backend/backend/: celery.py  settings.py  urls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  Routes.tsx  api.ts  main.tsx
frontend/src/actions/: actions.ts
frontend/src/app/: store.ts
frontend/src/components/: Errors.tsx  Header.tsx  UserInfo.tsx
frontend/src/components/auth/: ActivationInfo.tsx  LoginForm.tsx  SignupForm.tsx  VerificationInfo.tsx
frontend/src/pages/: Activation.tsx  Login.tsx  Main.tsx  Signup.tsx  Verification.tsx
frontend/src/slices/: authSlice.ts
frontend/src/types/: AuthTypes.ts  TokenTypes.ts  UserTypes.ts
